force-app/main/default/objects/os_CIF__c/os_CIF__c.object-meta.xml
<CustomObject>
    <label>CIF</label>
    <nameField>
        <displayFormat>CIF-{00000}</displayFormat>
        <label>CIF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>