force-app/main/default/objects/os_CIF__c/fields/Agency_Brifefing__c.field-meta.xml
<CustomField>
    <fullName>Agency_Brifefing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Brifefing</label>
    <type>Checkbox</type>
</CustomField>