force-app/main/default/objects/os_CIF__c/fields/CIF_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>CIF_Lead_Source__c</fullName>
    <label>CIF Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <color>#FFFFFF</color>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Walkin</fullName>
                <color>#FFFFFF</color>
                <label>Walkin</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <color>#FFFFFF</color>
                <label>Developer</label>
            </value>
            <value>
                <fullName>3rd Party Agency</fullName>
                <color>#FFFFFF</color>
                <label>3rd Party Agency</label>
            </value>
            <value>
                <fullName>Sales Centre</fullName>
                <color>#FFFFFF</color>
                <label>Sales Centre</label>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
                <color>#FFFFFF</color>
                <label>Word of Mouth</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <color>#FFFFFF</color>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Billboard</fullName>
                <color>#FFFFFF</color>
                <label>Billboard</label>
            </value>
            <value>
                <fullName>Google Search</fullName>
                <color>#FFFFFF</color>
                <label>Google Search</label>
            </value>
            <value>
                <fullName>Facebook</fullName>
                <color>#FFFFFF</color>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
                <color>#FFFFFF</color>
                <label>Personal Contact</label>
            </value>
            <value>
                <fullName>Existing Client</fullName>
                <color>#FFFFFF</color>
                <label>Existing Client</label>
            </value>
            <value>
                <fullName>Cityscape</fullName>
                <color>#FFFFFF</color>
                <label>Cityscape</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#FFFFFF</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>