force-app/main/default/objects/os_CIF__c/fields/CIF_Type__c.field-meta.xml
<CustomField>
    <fullName>CIF_Type__c</fullName>
    <label>CIF Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGENCY BRIEFING</fullName>
                <color>#FFFFFF</color>
                <label>AGENCY BRIEFING</label>
            </value>
            <value>
                <fullName>AGENCY BUYER</fullName>
                <color>#FFFFFF</color>
                <label>AGENCY BUYER</label>
            </value>
            <value>
                <fullName>DIRECT BUYER</fullName>
                <color>#FFFFFF</color>
                <label>DIRECT BUYER</label>
            </value>
            <value>
                <fullName>CONTACT REQUEST</fullName>
                <color>#FFFFFF</color>
                <label>CONTACT REQUEST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>