force-app/main/default/objects/os_CIF__c/fields/CIFSub_Type__c.field-meta.xml
<CustomField>
    <fullName>CIFSub_Type__c</fullName>
    <label>CIFSub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
                <color>#FFFFFF</color>
                <label>Buyer</label>
            </value>
            <value>
                <fullName>Seller</fullName>
                <color>#FFFFFF</color>
                <label>Seller</label>
            </value>
            <value>
                <fullName>Landlord</fullName>
                <color>#FFFFFF</color>
                <label>Landlord</label>
            </value>
            <value>
                <fullName>Tenant</fullName>
                <color>#FFFFFF</color>
                <label>Tenant</label>
            </value>
            <value>
                <fullName>Agent</fullName>
                <color>#FFFFFF</color>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Ownership</fullName>
                <color>#FFFFFF</color>
                <label>Ownership</label>
            </value>
            <value>
                <fullName>Solicitor</fullName>
                <color>#FFFFFF</color>
                <label>Solicitor</label>
            </value>
            <value>
                <fullName>Search Agent</fullName>
                <color>#FFFFFF</color>
                <label>Search Agent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>