force-app/main/default/objects/os_CIF__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <formula>Project__r.Community__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community</label>
    <type>Text</type>
</CustomField>