force-app/main/default/objects/os_CIF__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CIF (.Contact)</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>