force-app/main/default/objects/os_CIF__c/fields/CreateI_nquiry__c.field-meta.xml
<CustomField>
    <fullName>CreateI_nquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateI nquiry</label>
    <type>Checkbox</type>
</CustomField>