force-app/main/default/objects/os_CIF__c/fields/Disqualified_Reson__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reson__c</fullName>
    <label>Disqualified Reson</label>
    <length>30</length>
    <type>Text</type>
</CustomField>