force-app/main/default/objects/os_CIF__c/fields/How_Would_You_Like_Us_To_Contact_You__c.field-meta.xml
<CustomField>
    <fullName>How_Would_You_Like_Us_To_Contact_You__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How Would You Like Us To Contact You</label>
    <type>Checkbox</type>
</CustomField>