force-app/main/default/objects/os_CIF__c/fields/JOIN_TOWNER__c.field-meta.xml
<CustomField>
    <fullName>JOIN_TOWNER__c</fullName>
    <label>JOIN TOWNER</label>
    <length>18</length>
    <type>Text</type>
</CustomField>