force-app/main/default/objects/os_CIF__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>LeadSource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Walkin</fullName>
                <color>#FFFFFF</color>
                <label>Walkin</label>
            </value>
            <value>
                <fullName>3rd Party Agency</fullName>
                <color>#FFFFFF</color>
                <label>3rd Party Agency</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <color>#FFFFFF</color>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
                <color>#FFFFFF</color>
                <label>Word of Mouth</label>
            </value>
            <value>
                <fullName>Google Search</fullName>
                <color>#FFFFFF</color>
                <label>Google Search</label>
            </value>
            <value>
                <fullName>Billboard</fullName>
                <color>#FFFFFF</color>
                <label>Billboard</label>
            </value>
            <value>
                <fullName>Sales Centre</fullName>
                <color>#FFFFFF</color>
                <label>Sales Centre</label>
            </value>
            <value>
                <fullName>Agent</fullName>
                <color>#FFFFFF</color>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
                <color>#FFFFFF</color>
                <label>Internal Referral</label>
            </value>
            <value>
                <fullName>CCE - Did not probe</fullName>
                <color>#FFFFFF</color>
                <label>CCE - Did not probe</label>
            </value>
            <value>
                <fullName>Client doesn&apos;t want to provide</fullName>
                <color>#FFFFFF</color>
                <label>Client doesn&apos;t want to provide</label>
            </value>
            <value>
                <fullName>Commversion</fullName>
                <color>#FFFFFF</color>
                <label>Commversion</label>
            </value>
            <value>
                <fullName>Crimtan</fullName>
                <color>#FFFFFF</color>
                <label>Crimtan</label>
            </value>
            <value>
                <fullName>DIFC Office - Walkin</fullName>
                <color>#FFFFFF</color>
                <label>DIFC Office - Walkin</label>
            </value>
            <value>
                <fullName>Dubizzle</fullName>
                <color>#FFFFFF</color>
                <label>Dubizzle</label>
            </value>
            <value>
                <fullName>Existing Client</fullName>
                <color>#FFFFFF</color>
                <label>Existing Client</label>
            </value>
            <value>
                <fullName>External Agent Referral</fullName>
                <color>#FFFFFF</color>
                <label>External Agent Referral</label>
            </value>
            <value>
                <fullName>Four Season Sales centre</fullName>
                <color>#FFFFFF</color>
                <label>Four Season Sales centre</label>
            </value>
            <value>
                <fullName>Four seasons Retail</fullName>
                <color>#FFFFFF</color>
                <label>Four seasons Retail</label>
            </value>
            <value>
                <fullName>GSIR - Edm</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - Edm</label>
            </value>
            <value>
                <fullName>GSIR - Events &amp; Road Shows</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - Events &amp; Road Shows</label>
            </value>
            <value>
                <fullName>GSIR - Facebook</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - Facebook</label>
            </value>
            <value>
                <fullName>GSIR - Instagram</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - Instagram</label>
            </value>
            <value>
                <fullName>GSIR - Instapage</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - Instapage</label>
            </value>
            <value>
                <fullName>GSIR - LinkedIn</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - LinkedIn</label>
            </value>
            <value>
                <fullName>GSIR - Magazine</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - Magazine</label>
            </value>
            <value>
                <fullName>GSIR - YouTube</fullName>
                <color>#FFFFFF</color>
                <label>GSIR - YouTube</label>
            </value>
            <value>
                <fullName>GulfSIR.com</fullName>
                <color>#FFFFFF</color>
                <label>GulfSIR.com</label>
            </value>
            <value>
                <fullName>Gulf SIR Kiosk</fullName>
                <color>#FFFFFF</color>
                <label>Gulf SIR Kiosk</label>
            </value>
            <value>
                <fullName>Hash Digital</fullName>
                <color>#FFFFFF</color>
                <label>Hash Digital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>