force-app/main/default/objects/os_CIF__c/fields/LotSize__c.field-meta.xml
<CustomField>
    <fullName>LotSize__c</fullName>
    <label>LotSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>