force-app/main/default/objects/os_CIF__c/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <label>Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+966</fullName>
                <color>#FFFFFF</color>
                <label>+966</label>
            </value>
            <value>
                <fullName>+971</fullName>
                <color>#FFFFFF</color>
                <label>+971</label>
            </value>
            <value>
                <fullName>+974</fullName>
                <color>#FFFFFF</color>
                <label>+974</label>
            </value>
            <value>
                <fullName>+212</fullName>
                <color>#FFFFFF</color>
                <label>+212</label>
            </value>
            <value>
                <fullName>+973</fullName>
                <color>#FFFFFF</color>
                <label>+973</label>
            </value>
            <value>
                <fullName>+968</fullName>
                <color>#FFFFFF</color>
                <label>+968</label>
            </value>
            <value>
                <fullName>+965</fullName>
                <color>#FFFFFF</color>
                <label>+965</label>
            </value>
            <value>
                <fullName>+962</fullName>
                <color>#FFFFFF</color>
                <label>+962</label>
            </value>
            <value>
                <fullName>+20</fullName>
                <color>#FFFFFF</color>
                <label>+20</label>
            </value>
            <value>
                <fullName>+963</fullName>
                <color>#FFFFFF</color>
                <label>+963</label>
            </value>
            <value>
                <fullName>+216</fullName>
                <color>#FFFFFF</color>
                <label>+216</label>
            </value>
            <value>
                <fullName>+218</fullName>
                <color>#FFFFFF</color>
                <label>+218</label>
            </value>
            <value>
                <fullName>+970</fullName>
                <color>#FFFFFF</color>
                <label>+970</label>
            </value>
            <value>
                <fullName>+213</fullName>
                <color>#FFFFFF</color>
                <label>+213</label>
            </value>
            <value>
                <fullName>+222</fullName>
                <color>#FFFFFF</color>
                <label>+222</label>
            </value>
            <value>
                <fullName>+961</fullName>
                <color>#FFFFFF</color>
                <label>+961</label>
            </value>
            <value>
                <fullName>+249</fullName>
                <color>#FFFFFF</color>
                <label>+249</label>
            </value>
            <value>
                <fullName>+964</fullName>
                <color>#FFFFFF</color>
                <label>+964</label>
            </value>
            <value>
                <fullName>+967</fullName>
                <color>#FFFFFF</color>
                <label>+967</label>
            </value>
            <value>
                <fullName>+253</fullName>
                <color>#FFFFFF</color>
                <label>+253</label>
            </value>
            <value>
                <fullName>+252</fullName>
                <color>#FFFFFF</color>
                <label>+252</label>
            </value>
            <value>
                <fullName>+269</fullName>
                <color>#FFFFFF</color>
                <label>+269</label>
            </value>
            <value>
                <fullName>+7840</fullName>
                <color>#FFFFFF</color>
                <label>+7840</label>
            </value>
            <value>
                <fullName>+93</fullName>
                <color>#FFFFFF</color>
                <label>+93</label>
            </value>
            <value>
                <fullName>+35818</fullName>
                <color>#FFFFFF</color>
                <label>+35818</label>
            </value>
            <value>
                <fullName>+355</fullName>
                <color>#FFFFFF</color>
                <label>+355</label>
            </value>
            <value>
                <fullName>+1684</fullName>
                <color>#FFFFFF</color>
                <label>+1684</label>
            </value>
            <value>
                <fullName>+376</fullName>
                <color>#FFFFFF</color>
                <label>+376</label>
            </value>
            <value>
                <fullName>+244</fullName>
                <color>#FFFFFF</color>
                <label>+244</label>
            </value>
            <value>
                <fullName>+1264</fullName>
                <color>#FFFFFF</color>
                <label>+1264</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>