force-app/main/default/objects/os_CIF__c/fields/NAME_OF_THE_OWNER__c.field-meta.xml
<CustomField>
    <fullName>NAME_OF_THE_OWNER__c</fullName>
    <label>NAME OF THE OWNER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>