force-app/main/default/objects/os_CIF__c/fields/os_3rd_Party_Agent_BRN__c.field-meta.xml
<CustomField>
    <fullName>os_3rd_Party_Agent_BRN__c</fullName>
    <label>3rd Party Agent BRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>