force-app/main/default/objects/os_CIF__c/fields/os_Project_Agency__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Agency</label>
    <referenceTo>os_Project_Agency__c</referenceTo>
    <relationshipLabel>CIF</relationshipLabel>
    <relationshipName>CIF</relationshipName>
    <type>Lookup</type>
</CustomField>