force-app/main/default/objects/os_CIF__c/fields/os_Property_Ownership__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Ownership__c</fullName>
    <label>Property Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>