force-app/main/default/objects/os_CIF__c/fields/os_Requested_Inquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Requested_Inquiry_Id__c</fullName>
    <label>Requested Inquiry Id</label>
    <type>TextArea</type>
</CustomField>