force-app/main/default/objects/os_CIF__c/fields/os_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Residential_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>