force-app/main/default/objects/os_CIF__c/fields/PreferredPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredPaymentMethod__c</fullName>
    <label>PreferredPaymentMethod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
                <color>#FFFFFF</color>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <color>#FFFFFF</color>
                <label>Cheque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>