force-app/main/default/objects/os_CIF__c/fields/Primary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Number__c</fullName>
    <label>Primary Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>