force-app/main/default/objects/os_CIF__c/fields/Project_Admin2__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Admin2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CIF (.Project_Admin2)</relationshipLabel>
    <relationshipName>Project_Admin2</relationshipName>
    <type>Lookup</type>
</CustomField>