force-app/main/default/objects/os_CIF__c/fields/Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CIF (.Project_Admin)</relationshipLabel>
    <relationshipName>Project_Admin</relationshipName>
    <type>Lookup</type>
</CustomField>