force-app/main/default/objects/os_CIF__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
                <color>#FFFFFF</color>
                <label>UK</label>
            </value>
            <value>
                <fullName>UAE</fullName>
                <color>#FFFFFF</color>
                <label>UAE</label>
            </value>
            <value>
                <fullName>Saudi</fullName>
                <color>#FFFFFF</color>
                <label>Saudi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>