force-app/main/default/objects/os_CIF__c/fields/Request_To_Create__c.field-meta.xml
<CustomField>
    <fullName>Request_To_Create__c</fullName>
    <label>Request To Create</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact Only</fullName>
                <color>#FFFFFF</color>
                <label>Contact Only</label>
            </value>
            <value>
                <fullName>Inquiry Only</fullName>
                <color>#FFFFFF</color>
                <label>Inquiry Only</label>
            </value>
            <value>
                <fullName>Contact &amp; Inquiry Both</fullName>
                <color>#FFFFFF</color>
                <label>Contact &amp; Inquiry Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>