force-app/main/default/objects/os_CIF__c/fields/Requested_InquiryId__c.field-meta.xml
<CustomField>
    <fullName>Requested_InquiryId__c</fullName>
    <label>Requested InquiryId</label>
    <type>TextArea</type>
</CustomField>