force-app/main/default/objects/os_CIF__c/fields/Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Email__c</fullName>
    <label>Secondary Contact Email</label>
    <type>Email</type>
</CustomField>