force-app/main/default/objects/os_CIF__c/fields/Secondary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Number__c</fullName>
    <label>Secondary Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>