force-app/main/default/objects/os_CIF__c/fields/Sharing_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Sub_Region__c</fullName>
    <label>Sharing Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liverpool</fullName>
                <color>#FFFFFF</color>
                <label>Liverpool</label>
            </value>
            <value>
                <fullName>Manchester</fullName>
                <color>#FFFFFF</color>
                <label>Manchester</label>
            </value>
            <value>
                <fullName>Dubai</fullName>
                <color>#FFFFFF</color>
                <label>Dubai</label>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
                <color>#FFFFFF</color>
                <label>Abu Dhabi</label>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
                <color>#FFFFFF</color>
                <label>Ras Al Khaimah</label>
            </value>
            <value>
                <fullName>Sharjah</fullName>
                <color>#FFFFFF</color>
                <label>Sharjah</label>
            </value>
            <value>
                <fullName>Ajman</fullName>
                <color>#FFFFFF</color>
                <label>Ajman</label>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
                <color>#FFFFFF</color>
                <label>Umm Al Quwain</label>
            </value>
            <value>
                <fullName>Fujairah</fullName>
                <color>#FFFFFF</color>
                <label>Fujairah</label>
            </value>
            <value>
                <fullName>Riyadh</fullName>
                <color>#FFFFFF</color>
                <label>Riyadh</label>
            </value>
            <value>
                <fullName>Jeddah</fullName>
                <color>#FFFFFF</color>
                <label>Jeddah</label>
            </value>
            <value>
                <fullName>Makkah</fullName>
                <color>#FFFFFF</color>
                <label>Makkah</label>
            </value>
            <value>
                <fullName>Al-Madinah</fullName>
                <color>#FFFFFF</color>
                <label>Al-Madinah</label>
            </value>
            <value>
                <fullName>Buraidah</fullName>
                <color>#FFFFFF</color>
                <label>Buraidah</label>
            </value>
            <value>
                <fullName>Dammam</fullName>
                <color>#FFFFFF</color>
                <label>Dammam</label>
            </value>
            <value>
                <fullName>Abha</fullName>
                <color>#FFFFFF</color>
                <label>Abha</label>
            </value>
            <value>
                <fullName>Tabouk</fullName>
                <color>#FFFFFF</color>
                <label>Tabouk</label>
            </value>
            <value>
                <fullName>Hayel</fullName>
                <color>#FFFFFF</color>
                <label>Hayel</label>
            </value>
            <value>
                <fullName>Ar&apos;ar</fullName>
                <color>#FFFFFF</color>
                <label>Ar&apos;ar</label>
            </value>
            <value>
                <fullName>Jazan</fullName>
                <color>#FFFFFF</color>
                <label>Jazan</label>
            </value>
            <value>
                <fullName>Najran</fullName>
                <color>#FFFFFF</color>
                <label>Najran</label>
            </value>
            <value>
                <fullName>Al-Baha</fullName>
                <color>#FFFFFF</color>
                <label>Al-Baha</label>
            </value>
            <value>
                <fullName>Sakaka</fullName>
                <color>#FFFFFF</color>
                <label>Sakaka</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>