force-app/main/default/objects/os_CIF__c/fields/SharingRule__c.field-meta.xml
<CustomField>
    <fullName>SharingRule__c</fullName>
    <label>SharingRule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gulf Sothebys</fullName>
                <color>#FFFFFF</color>
                <label>Gulf Sothebys</label>
            </value>
            <value>
                <fullName>Private</fullName>
                <color>#FFFFFF</color>
                <label>Private</label>
            </value>
            <value>
                <fullName>Project Developments</fullName>
                <color>#FFFFFF</color>
                <label>Project Developments</label>
            </value>
            <value>
                <fullName>UK Sotheby&apos;s International Realty</fullName>
                <color>#FFFFFF</color>
                <label>UK Sotheby&apos;s International Realty</label>
            </value>
            <value>
                <fullName>Saudi Arabia Sotheby&apos;s International Realty</fullName>
                <color>#FFFFFF</color>
                <label>Saudi Arabia Sotheby&apos;s International Realty</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <color>#FFFFFF</color>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>